Change icons. Make images more responsive. Fix cards. Add card dark mode shadow

--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,15 @@
     clip-path: polygon(0 0, 100% 0, 100% 87%, 0 100%);
   }
 }
+
+.white-shadow {
+  /* --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow); */
+
+  /* --tw-shadow: 0 25px 50px -12px rgba(255, 255, 255, 0.25);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #ffff),
+    var(--tw-ring-shadow, 0 0 #ffff), var(--tw-shadow); */
+
+  -webkit-box-shadow: 0px 9px 24px 0px rgba(255, 255, 255, 0.1);
+  box-shadow: 0px 9px 24px 0px rgba(255, 255, 255, 0.1);
+}
